welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:34: error: ':' expected but ')' found.
def aaa (String) : Int{
               ^Array2:40: error: identifier expected but '}' found.
}
^